--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.10",
+        "@tailwindcss/postcss": "^4.1.11",
         "@tailwindcss/vite": "^4.0.0",
         "alpinejs": "^3.14.9",
         "autoprefixer": "^10.4.21",
