fix: implementasi QR Code scanner yang benar dengan library zxing

--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
     "require": {
         "php": "^8.2",
         "endroid/qr-code": "^5.0",
+        "khanamiryan/qrcode-detector-decoder": "^2.0",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
         "simplesoftwareio/simple-qrcode": "^4.2"
