--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
         "postcss": "^8.5.6",
         "tailwindcss": "^4.1.11",
         "vite": "^6.2.4"
+    },
+    "dependencies": {
+        "qr-scanner": "^1.4.2"
     }
 }
